virtual edition card boxes now move correctly depending on screen width and wrap text inside them

--- a/ldod-visual/src/containers/PublicEditionContainer.css
+++ b/ldod-visual/src/containers/PublicEditionContainer.css
@@ -8,11 +8,12 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 20%;
   padding: 10px;
   margin: 15px;
-  flex: 1 1 30%;
 
+  display: flex;
+  flex: 0 1 300px;
+  min-width: 0px;
 }
 
 .card:hover {
@@ -21,5 +22,5 @@
 
 .container {
   padding: 2px 16px;
-  word-wrap:break-word
+  justify-content: center;
 }
